2001-09-10  Sam Steingold  <sds@gnu.org>

	* macros2.lisp (Exhaustive-Case-Analysis): added CASE-LIST flet
	(gensym-list): new function
	(time, space): use it
	* compiler.lisp (c-MAP-on-CARs, c-MAP-on-LISTs, c-MAPC, c-MAPL): ditto
	* condition.lisp (handler-bind): ditto
	* format.lisp (formatter-main-1): ditto
	* places.lisp (get-setf-expansion, push, pushnew): ditto
	* clos.lisp (analyze-method-description, prototype-table,
	compute-dispatch, compute-effective-method, generic-flet,
	generic-labels): ditto
	(n-gensyms): removed

2001-09-10  Sam Steingold  <sds@gnu.org>

	fixed bug #458746
	* format.lisp (format-float-to-string): make sure width is at
	least 2 (when given): for a digit and for the decimal point

2001-09-09  Stefan Kain  <stefan.kain@freenet.de>

	* format.lisp: translated all comments

2001-09-09  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (offsetof): [MSVC] defined in <stddef.h>

2001-09-09  Sam Steingold  <sds@gnu.org>

	* pathname.d (host_namestring_parts): handle logical pathnames on win32

2001-09-07  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, error.d, genclisph.d (conditiontype):
	renamed to `condition_t'

2001-09-07  Oliver Nee  <o.nee@t-online.de>
	    Sam Steingold  <sds@gnu.org>

	* lispbibl.d: translated half of the comments

2001-09-06  Sam Steingold  <sds@gnu.org>

	* macros1.lisp (case-expand): new function
	(case): use it
	(fcase): new macro

2001-09-05  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (debug-backtrace): print the number of frames
	* debug.d (SHOW-STACK): return the number of frames examined

2001-09-05  Sam Steingold  <sds@gnu.org>

	* install.lisp (add-fas-file, add-mem-file): set the default action

2001-08-30  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (nonreturning_function): [MICROSOFT] __declspec(noreturn)

2001-08-30  Sam Steingold  <sds@gnu.org>

	* pathname.d (MERGE-PATHNAMES): when physical directories do not
	match, check for unbound directory in pathname

2001-08-29  Sam Steingold  <sds@gnu.org>
