@@ -1,5 +1,9 @@
 2001-09-10  Sam Steingold  <sds@gnu.org>
 
+	* io.d (pr_enter_1): a GC-safety issue
+
+2001-09-10  Sam Steingold  <sds@gnu.org>
+
 	* macros2.lisp (Exhaustive-Case-Analysis): added CASE-LIST flet
 	(gensym-list): new function
 	(time, space): use it
